--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 *{
   margin: 0;
   padding: 0;
@@ -9,5 +11,5 @@ a{
 }
 
 body{
-  background-color: #131515;
+  background-color: $gray-900;
 }
