--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,7 +14,11 @@ a{
 body{
   background-color: $gray-900;
 
+  width: 100%;
+  height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
