--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,4 +21,12 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
 }
