--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,17 +1,17 @@
-@import 'variables.scss';
+@import "variables.scss";
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Clash Grotesk', sans-serif;;
+  font-family: "Clash Grotesk", sans-serif;
 }
 
-a{
-  all:unset;
+a {
+  all: unset;
 }
 
-body{
+body {
   background-color: $gray-900;
 
   width: 100%;
@@ -22,11 +22,12 @@ body{
   align-items: center;
   justify-content: center;
 
-  main{
+  main {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
 
+
+  }
 }
