--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,5 +27,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    nav{
+      width: 80%;
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
 }
