feat: add card link styles

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -29,9 +29,10 @@ body {
     justify-content: center;
 
     nav{
-      width: 80%;
+      width: 100%;
       display: flex;
       flex-wrap: wrap;
+      justify-content: space-between;
     }
   }
 }
