--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,7 +15,7 @@ body {
   background-color: $gray-900;
 
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 
   display: flex;
   flex-direction: column;
@@ -27,12 +27,15 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100vw;
 
-    nav{
-      width: 100%;
+    nav {
+      min-width: 60%;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: center;
+      gap: 0.5rem;
+      margin-top: 2rem;
     }
   }
 }
